bonus/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playground
  template:
    metadata:
      labels:
        app: playground
    spec:
      containers:
        - name: playground
          # Change this tag from v1 to v2 to trigger ArgoCD auto-sync
          image: wil42/playground:v2
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: playground
  namespace: dev
spec:
  selector:
    app: playground
  ports:
    - port: 8888
      targetPort: 8888
  type: ClusterIP
